@@ -20,13 +20,13 @@ import net.ltgt.gradle.errorprone.CheckSeverity
 import java.text.SimpleDateFormat
 
 plugins {
-  id 'com.diffplug.spotless' version '5.9.0'
-  id 'com.github.ben-manes.versions' version '0.36.0'
-  id 'com.github.hierynomus.license' version '0.15.0'
-  id 'com.jfrog.artifactory' version '4.20.0'
+  id 'com.diffplug.spotless' version '5.14.2'
+  id 'com.github.ben-manes.versions' version '0.39.0'
+  id 'com.github.hierynomus.license' version '0.16.1'
+  id 'com.jfrog.artifactory' version '4.24.14'
   id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-  id 'me.champeau.gradle.jmh' version '0.5.0' apply false
-  id 'net.ltgt.errorprone' version '1.3.0'
+  id 'me.champeau.gradle.jmh' version '0.5.3' apply false
+  id 'net.ltgt.errorprone' version '2.0.2'
   id 'maven-publish'
 }
 
@@ -96,14 +96,13 @@ allprojects {
 
   task javadocJar(type: Jar, dependsOn: javadoc) {
     classifier = 'javadoc'
-    from javadoc.destinationDir
+    from javadoc.outputDirectory
   }
 
   sourceCompatibility = 11
   targetCompatibility = 11
 
   repositories {
-    jcenter()
     mavenCentral()
     maven { url "https://hyperledger.jfrog.io/hyperledger/besu-maven" }
     maven { url "https://artifacts.consensys.net/public/maven/maven/" }
@@ -117,18 +116,9 @@ allprojects {
   spotless {
     java {
       // This path needs to be relative to each project
-      target fileTree('.') {
-        include '**/src/*/java/**/*.java'
-        exclude '**/generalstate/GeneralStateReferenceTest*.java'
-        exclude '**/generalstate/GeneralStateRegressionReferenceTest*.java'
-        exclude '**/generalstate/LegacyGeneralStateReferenceTest*.java'
-        exclude '**/blockchain/BlockchainReferenceTest*.java'
-        exclude '**/blockchain/LegacyBlockchainReferenceTest*.java'
-        exclude '**/reference-test/resources/docker_interop/**'
-        exclude '**/.gradle/**'
-      }
+      target '**/src/*/java/**/*.java'
       removeUnusedImports()
-      googleJavaFormat('1.7')
+      googleJavaFormat('1.10.0')
       importOrder 'org.hyperledger', 'java', ''
       trimTrailingWhitespace()
       endWithNewline()
@@ -138,20 +128,10 @@ allprojects {
       greclipse().configFile(rootProject.file('gradle/formatter.properties'))
       endWithNewline()
     }
-
     // Below this line are currently only license header tasks
     format 'groovy', { target '**/src/*/grovy/**/*.groovy' }
-
-    // Currently disabled due to referencetest issues
-    //  format 'bash', {
-    //    target fileTree('.') {
-    //      include '**/*.sh'
-    //     exclude '**/ansible/**'
-    //    }
-    //  }
-    //  format 'sol', {
-    //    target fileTree('.') { include '**/*.sol' }
-    //  }
+    format 'bash', { target '**/*.sh' }
+    format 'sol', { target '**/*.sol' }
   }
 
   tasks.withType(JavaCompile) {
@@ -233,7 +213,24 @@ allprojects {
       '--add-opens',
       'java.base/java.util.concurrent=ALL-UNNAMED',
       '--add-opens',
-      'java.base/java.util.concurrent.atomic=ALL-UNNAMED'
+      'java.base/java.util.concurrent.atomic=ALL-UNNAMED',
+      // errorpone tests need access to the javac compiler
+      '--add-exports',
+      'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+      '--add-exports',
+      'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+      '--add-exports',
+      'jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
+      '--add-exports',
+      'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
+      '--add-exports',
+      'jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
+      '--add-exports',
+      'jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
+      '--add-exports',
+      'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+      '--add-exports',
+      'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
     ]
     Set toImport = [
       'test.ethereum.include',
@@ -510,7 +507,7 @@ startScripts {
 }
 
 task evmToolStartScripts(type: CreateStartScripts) {
-  mainClassName = 'org.hyperledger.besu.evmtool.EvmTool'
+  mainClass = 'org.hyperledger.besu.evmtool.EvmTool'
   classpath = startScripts.classpath
   outputDir = startScripts.outputDir
   applicationName = 'evm'
@@ -600,6 +597,7 @@ tasks.register("dockerDistUntar") {
       from tarTree(distTarFile)
       into(dockerBuildDir)
     }
+    project.delete(files("${dockerBuildDir}/besu"))
     file("${dockerBuildDir}/${distTarFileName}").renameTo("${dockerBuildDir}/besu")
   }
 }
@@ -696,7 +694,7 @@ task dockerUpload {
   def image = "${imageName}:${dockerBuildVersion}"
   def additionalTags = []
 
-  if (project.hasProperty('branch') && project.property('branch') == 'master') {
+  if (project.hasProperty('branch') && project.property('branch') == 'main') {
     additionalTags.add('develop')
   }
 
@@ -758,8 +756,8 @@ task jacocoRootReport(type: org.gradle.testing.jacoco.tasks.JacocoReport) {
   classDirectories.from files(subprojects.sourceSets.main.output)
   executionData.from fileTree(dir: '.', includes: ['**/jacoco/*.exec'])
   reports {
-    xml.enabled true
-    csv.enabled true
+    xml.required = true
+    csv.required = true
     html.destination file("build/reports/jacocoHtml")
   }
   onlyIf = { true }
